RESOLVED FIXED17158
Setting innerHTML in a detached XHTML element doesn't use the right namespace
https://bugs.webkit.org/show_bug.cgi?id=17158
Summary Setting innerHTML in a detached XHTML element doesn't use the right namespace
nicholas Buenk
Reported 2008-02-02 14:58:11 PST
Click on the arrows, text is broken up into multiple lines.
Attachments
proposed fix (3.55 KB, patch)
2008-02-04 02:59 PST, Alexey Proskuryakov
darin: review+
mitz
Comment 1 2008-02-02 17:15:26 PST
The document creates TR and TD elements in the null namespace. See bug 8007.
Alexey Proskuryakov
Comment 2 2008-02-04 02:20:05 PST
This is a problem not just with this site, but with Prototype.js in general.
Alexey Proskuryakov
Comment 3 2008-02-04 02:59:06 PST
Created attachment 18901 [details] proposed fix
Darin Adler
Comment 4 2008-02-05 11:37:50 PST
Comment on attachment 18901 [details] proposed fix r=me
Alexey Proskuryakov
Comment 5 2008-02-05 11:56:16 PST
Committed revision 30013.
Lucas Forschler
Comment 6 2019-02-06 09:03:17 PST
Mass moving XML DOM bugs to the "DOM" Component.
Note You need to log in before you can comment on or make changes to this bug.