        Reviewed by Darin.

http://bugs.webkit.org/show_bug.cgi?id=17158
        Setting innerHTML in a detached XHTML element doesn't use the right namespace

        Test: fast/dom/innerHTML-detached-element.xhtml

        * dom/XMLTokenizer.cpp: (WebCore::XMLTokenizer::XMLTokenizer): Take parent element namespace
        into account.



Canonical link: https://commits.webkit.org/23830@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@30013 268f45cc-cd09-0410-ab3c-d52691b4dbfc